finished ML section, got .gitignore template up and running for everyone's versions

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@
 .Rhistory
 .Rapp.history
 
+results/**/*.rds
+results/**/*.csv
+results/**/fits/
+
+!results/**/*_loo_results.csv
 
 data/*erddap*
 # Session Data files
 .RData
-results/
 # User-specific files
 .Ruserdata
 
