--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ results/**/fits/
 
 !README_files/**/*.pdf
 
-
+data/ram/
+*.zip
 presentations/processor-meeting-jan-2020
 presentations/asp-2019
 !results/**/*_loo_results.csv
